# comfyui-prompt-reader-node

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  __init__.py  __version__.py  nodes.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: package_repo.yml  publish_registry.yml
js/: extractorDisplay.js  loaderDisplay.js  parameterDisplay.js  promptDisplay.js  seedGen.js  utils.js
workflows/: example_workflow.json  hires_fix_example.json  lora_example.json  sdxl_example.json  simple_example.json
