[project]
name = "comfyui-prompt-reader-node"
description = "The ultimate solution for managing image metadata and multi-tool compatibility. ComfyUI node version of the SD Prompt Reader."
version = "1.3.4"
license = { text = "MIT License" }
dependencies = ["piexif"]

[project.urls]
Repository = "https://github.com/receyuki/comfyui-prompt-reader-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "receyuki"
DisplayName = "comfyui-prompt-reader-node"
Icon = "https://raw.githubusercontent.com/receyuki/comfyui-prompt-reader-node/main/images/icon-400.png"
